--- a/ConsoleApplication2/ConsoleApplication2.vcxproj.filters
+++ b/ConsoleApplication2/ConsoleApplication2.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Instrument.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TuneKey.hpp">
